having issues with height and overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
     --bg-dark: #005792;
     --bg-light: #D1F4FA;
     --bck-grnd: #F9F9F9;
+    --bck-grnd-opa:  background-color: darken(rgba(0, 87, 146, .8), 10%);
    // --brt-fnt-clr: rgb(255, 255, 255);
     --trans-duration: 300ms;
     --header-h1-wdth: min-content;
@@ -46,6 +47,7 @@ body {
     width: 100%;
     min-height: 100%;
     background-color: var(--bck-grnd);
+    scroll-behavior: smooth;
 }
 
 
@@ -111,7 +113,7 @@ header {
         justify-content: flex-start;
         gap: 1.4rem;
         flex-direction: column;
-        background-color: darken(rgba(0, 87, 146, .8), 10%);
+        background-color: darken( rgba(0, 87, 146, .8), 10%);
         color: var(--bck-grnd);
 
         h1 {
@@ -338,4 +340,61 @@ header {
 
 .contact-info {
     height: 100vh;
+    background-color: rgba(0, 87, 146, .5);
+    position: relative;
+    display: grid;
+    grid-template:
+    "title info" 100%/
+    40% 60%;
+
+    & * {
+        border: 2px solid yellowgreen;
+    }
+
+    &::after {
+        background-image: url("../images/city-scape.jpg");
+        @include bg-img;
+        position: absolute;
+        inset: 0;
+    }
+    .title-header {
+        grid-area: title;
+        place-self: center;
+        height: 100%;
+        width: 100%;
+        background-color: var(--bg-dark);
+        
+        h1 {
+            color: var(--bck-grnd);
+
+            font: {
+                size: var(--h1-fnt-sz);
+                weight: var(--h1-fnt-wght);
+            }
+        }
+    }
+    .contact {
+        grid-area: info;
+        
+    }
+}
+
+.to-top {
+    @include flex;
+    background-color: darken( #005792, 13%);
+    height: 10vh;
+    
+    & a {
+        color: var(--bck-grnd);
+        
+        font: {
+            size: 1.1rem;
+            weight: 600;
+       }
+    }
+}
+
+footer {
+    height: 13vh;
+    @include flex;
 }
